// Vitest Snapshot v1

exports[`objects > compat > should use manual assignment instead of Object.assign 1`] = `"({hello:\\"world\\"})"`;

exports[`objects > compat#toJSON > should use manual assignment instead of Object.assign 1`] = `"{\\"t\\":{\\"t\\":11,\\"i\\":0,\\"d\\":{\\"k\\":[\\"hello\\"],\\"v\\":[{\\"t\\":1,\\"s\\":\\"world\\"}],\\"s\\":1}},\\"r\\":0,\\"i\\":true,\\"f\\":16255,\\"m\\":[]}"`;

exports[`objects > compat#toJSON > should use manual assignment instead of Object.assign 2`] = `"({hello:\\"world\\"})"`;

exports[`objects > serialize > supports Objects 1`] = `"({hello:\\"world\\"})"`;

exports[`objects > serialize > supports Symbol.iterator 1`] = `"({[Symbol.iterator]:()=>[1,2,3].values()})"`;

exports[`objects > serialize > supports self-recursion 1`] = `"(h=>(h={},h.b=h.a=h,h))()"`;

exports[`objects > serializeAsync > supports Objects 1`] = `"Promise.resolve({hello:\\"world\\"})"`;

exports[`objects > serializeAsync > supports Symbol.iterator 1`] = `"Promise.resolve({[Symbol.iterator]:()=>[1,2,3].values()})"`;

exports[`objects > serializeAsync > supports self-recursion 1`] = `"(h=>(h={a:Promise.resolve().then(()=>h),b:Promise.resolve().then(()=>h)}))()"`;

exports[`objects > toJSON > supports Objects 1`] = `"{\\"t\\":{\\"t\\":11,\\"i\\":0,\\"d\\":{\\"k\\":[\\"hello\\"],\\"v\\":[{\\"t\\":1,\\"s\\":\\"world\\"}],\\"s\\":1}},\\"r\\":0,\\"i\\":true,\\"f\\":16383,\\"m\\":[]}"`;

exports[`objects > toJSON > supports Symbol.iterator 1`] = `
{
  "f": 16383,
  "i": true,
  "m": [],
  "r": 0,
  "t": {
    "a": undefined,
    "b": undefined,
    "c": undefined,
    "d": {
      "k": [
        0,
      ],
      "s": 1,
      "v": [
        {
          "a": [
            {
              "a": undefined,
              "b": undefined,
              "c": undefined,
              "d": undefined,
              "f": undefined,
              "i": undefined,
              "l": undefined,
              "m": undefined,
              "s": 1,
              "t": 0,
            },
            {
              "a": undefined,
              "b": undefined,
              "c": undefined,
              "d": undefined,
              "f": undefined,
              "i": undefined,
              "l": undefined,
              "m": undefined,
              "s": 2,
              "t": 0,
            },
            {
              "a": undefined,
              "b": undefined,
              "c": undefined,
              "d": undefined,
              "f": undefined,
              "i": undefined,
              "l": undefined,
              "m": undefined,
              "s": 3,
              "t": 0,
            },
          ],
          "b": undefined,
          "c": undefined,
          "d": undefined,
          "f": undefined,
          "i": 1,
          "l": 3,
          "m": undefined,
          "s": undefined,
          "t": 10,
        },
      ],
    },
    "f": undefined,
    "i": 0,
    "l": undefined,
    "m": undefined,
    "s": undefined,
    "t": 11,
  },
}
`;

exports[`objects > toJSON > supports self-recursion 1`] = `"{\\"t\\":{\\"t\\":11,\\"i\\":0,\\"d\\":{\\"k\\":[\\"a\\",\\"b\\"],\\"v\\":[{\\"t\\":5,\\"i\\":0},{\\"t\\":5,\\"i\\":0}],\\"s\\":2}},\\"r\\":0,\\"i\\":true,\\"f\\":16383,\\"m\\":[0]}"`;

exports[`objects > toJSONAsync > supports Objects 1`] = `"{\\"t\\":{\\"t\\":11,\\"i\\":0,\\"d\\":{\\"k\\":[\\"hello\\"],\\"v\\":[{\\"t\\":1,\\"s\\":\\"world\\"}],\\"s\\":1}},\\"r\\":0,\\"i\\":true,\\"f\\":16383,\\"m\\":[]}"`;

exports[`objects > toJSONAsync > supports Symbol.iterator 1`] = `
{
  "f": 16383,
  "i": false,
  "m": [],
  "r": 0,
  "t": {
    "a": undefined,
    "b": undefined,
    "c": undefined,
    "d": undefined,
    "f": {
      "a": undefined,
      "b": undefined,
      "c": undefined,
      "d": {
        "k": [
          0,
        ],
        "s": 1,
        "v": [
          {
            "a": [
              {
                "a": undefined,
                "b": undefined,
                "c": undefined,
                "d": undefined,
                "f": undefined,
                "i": undefined,
                "l": undefined,
                "m": undefined,
                "s": 1,
                "t": 0,
              },
              {
                "a": undefined,
                "b": undefined,
                "c": undefined,
                "d": undefined,
                "f": undefined,
                "i": undefined,
                "l": undefined,
                "m": undefined,
                "s": 2,
                "t": 0,
              },
              {
                "a": undefined,
                "b": undefined,
                "c": undefined,
                "d": undefined,
                "f": undefined,
                "i": undefined,
                "l": undefined,
                "m": undefined,
                "s": 3,
                "t": 0,
              },
            ],
            "b": undefined,
            "c": undefined,
            "d": undefined,
            "f": undefined,
            "i": 2,
            "l": 3,
            "m": undefined,
            "s": undefined,
            "t": 10,
          },
        ],
      },
      "f": undefined,
      "i": 1,
      "l": undefined,
      "m": undefined,
      "s": undefined,
      "t": 11,
    },
    "i": 0,
    "l": undefined,
    "m": undefined,
    "s": undefined,
    "t": 13,
  },
}
`;

exports[`objects > toJSONAsync > supports self-recursion 1`] = `"{\\"t\\":{\\"t\\":11,\\"i\\":0,\\"d\\":{\\"k\\":[\\"a\\",\\"b\\"],\\"v\\":[{\\"t\\":13,\\"i\\":1,\\"f\\":{\\"t\\":5,\\"i\\":0}},{\\"t\\":13,\\"i\\":2,\\"f\\":{\\"t\\":5,\\"i\\":0}}],\\"s\\":2}},\\"r\\":0,\\"i\\":true,\\"f\\":16383,\\"m\\":[0]}"`;
